// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`submitCredentials should dispatch \`[AUTHENTICATION] Failed\` when \`submitCredentials\` is called with different username and password 1`] = `
Array [
  Array [
    Object {
      "type": "[AUTHENTICATION] SubmitCredentialsStart",
    },
  ],
  Array [
    Object {
      "payload": "Invalid authentication data.",
      "type": "[AUTHENTICATION] Failed",
    },
  ],
  Array [
    Object {
      "type": "[AUTHENTICATION] SubmitCredentialsStart",
    },
  ],
  Array [
    Object {
      "payload": "Username and password are not the same.",
      "type": "[AUTHENTICATION] Failed",
    },
  ],
]
`;

exports[`submitCredentials should dispatch \`[AUTHENTICATION] Failed\` when \`submitCredentials\` is called with invalid username or password 1`] = `
Array [
  Array [
    Object {
      "type": "[AUTHENTICATION] SubmitCredentialsStart",
    },
  ],
  Array [
    Object {
      "payload": "Invalid authentication data.",
      "type": "[AUTHENTICATION] Failed",
    },
  ],
]
`;

exports[`submitCredentials should dispatch \`[AUTHENTICATION] SubmitCredentialsSuccess\` when \`submitHandler\` is called with same username and password 1`] = `
Array [
  Array [
    Object {
      "type": "[AUTHENTICATION] SubmitCredentialsStart",
    },
  ],
  Array [
    Object {
      "payload": "Invalid authentication data.",
      "type": "[AUTHENTICATION] Failed",
    },
  ],
  Array [
    Object {
      "type": "[AUTHENTICATION] SubmitCredentialsStart",
    },
  ],
  Array [
    Object {
      "payload": "Username and password are not the same.",
      "type": "[AUTHENTICATION] Failed",
    },
  ],
  Array [
    Object {
      "type": "[AUTHENTICATION] SubmitCredentialsStart",
    },
  ],
  Array [
    Object {
      "payload": "user",
      "type": "[AUTHENTICATION] SubmitCredentialsSuccess",
    },
  ],
]
`;
